--- a/vinculos/menu.html
+++ b/vinculos/menu.html
@@ -5,16 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> MENU A LA CARTA </title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <body class="menu-fondo">
 
     <header>
 
-        <nav>
-            <ul class="links-inicio">
-                <li><a href="../index.html">Ir al inicio</a></li>
+           
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <strong><a class="navbar-brand" href="../index.html"> Inicio</a></strong>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
 
-                <li><a href="https://www.lapanerarosa.com.ar/images/home/1/pdf_carta.pdf">menu</a></li>
-            </ul>
+                    <li class="nav-item">
+                        <a  class="nav-link active"href="https://www.lapanerarosa.com.ar/images/home/1/pdf_carta.pdf">Nuestro Menu</a></li>
+
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="ubicaciones.html">Nuestras Sucursales</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="nosotros.html">Historia de la Panera Rosa</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="contactenos.html">Contactenos</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
         </nav>
 
 
@@ -22,14 +44,16 @@
 </body>
 
 <main>
+    
+
     <section class="imagenes-fondo-menu">
         <div >
-            <img src="../imagenes-logos/pancakes.jpeg" alt=" imagen pancakes">
-            <img src="../imagenes-logos/desayuno.jpeg" alt="imagen desayuno">
-            <img src="../imagenes-logos/almuerzo.jpeg" alt="imagen almuerzo">
-            <img src="../imagenes-logos/abocado.jpeg" alt="imagen abocado">
-            <img src="../imagenes-logos/hamburguesa.jpeg" alt="imagen hamburguesa">
-            <img src="../imagenes-logos/menu-plato.jpeg" alt="imagen plato">
+            <img src="../imagenes-logos/pancakes.jpeg" alt=" imagen pancakes">l
+            <img src="../imagenes-logos/desayuno.jpeg" alt="imagen desayuno">l
+            <img src="../imagenes-logos/almuerzo.jpeg" alt="imagen almuerzo">l
+            <img src="../imagenes-logos/abocado.jpeg" alt="imagen abocado">l
+            <img src="../imagenes-logos/hamburguesa.jpeg" alt="imagen hamburguesa">l
+            <img src="../imagenes-logos/menu-plato.jpeg" alt="imagen plato">l
             <img src="../imagenes-logos/menu-plato2-para2.jpeg" alt="imagen plato2">
             <img src="../imagenes-logos/plato.jpeg" alt="imagen plato3">
             <img src="../imagenes-logos/wafle.jpeg" alt="imagen wafle">
