--- a/vinculos/ubicaciones.html
+++ b/vinculos/ubicaciones.html
@@ -5,16 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> DONDE ENCONTARNOS </title>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
     <header>
 
         <nav>
-            <ul>
-                <a class="links-inicio" href="../index.html"><li> Ir al inicio</li></a>
-            </ul>
-        </nav>
+
+               
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <strong> <a class="navbar-brand" href="../index.html"> Inicio</a></strong>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="ubicaciones.html">Nuestras Sucursales</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="nosotros.html">Historia de la Panera Rosa</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contactenos.html">Contactenos</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            </nav>
+
 
     </header>
 </body>
