--- a/vinculos/contactenos.html
+++ b/vinculos/contactenos.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="nosotros.html">Historia de la Panera Rosa</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contactenos.html">Contactenos</a>
+                    <a class="nav-link" href="menu.html">Nuestra Carta</a>
                   </li>
                 </ul>
               </div>
