--- a/vinculos/nosotros.html
+++ b/vinculos/nosotros.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="ubicaciones.html">Nuestras Sucursales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="nosotros.html">Historia de la Panera Rosa</a>
+                    <a class="nav-link" href="menu.html">Nuestra Carta</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contactenos.html">Contactenos</a>
