--- a/vinculos/ubicaciones.html
+++ b/vinculos/ubicaciones.html
@@ -23,7 +23,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="ubicaciones.html">Nuestras Sucursales</a>
+                    <a class="nav-link active" aria-current="page" href="menu.html">Nuestra Carta</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="nosotros.html">Historia de la Panera Rosa</a>
